feat: Upgrade the Machine Learning Workspace Resource provider Version

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-  "name": "Ubuntu",
+  "name": "Bicep Registry Modules",
   "image": "mcr.microsoft.com/devcontainers/javascript-node:20-bullseye",
   "customizations": {
     "vscode": {
@@ -13,7 +13,8 @@
         "ms-vsliveshare.vsliveshare",
         "ms-vscode-remote.remote-containers",
         "zokugun.explicit-folding",
-        "GitHub.copilot-labs"
+        "GitHub.copilot-labs",
+        "ms-vscode.azure-account"
       ]
     }
   },
